Implemented Live Search

--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -3,4 +3,5 @@
   <button class="btn">
     <span class="glyphicon glyphicon-search"></span>
   </button>
+  <div class="live-results"></div>
 </div>
